--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
     "axios": "^1.8.2",
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
